--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -27,7 +27,7 @@ h2 {
   display: flex;
   justify-content: flex-end;
 }
-.deleteButton {
+.button {
   background: white;
   border: 1px solid black;
   font-weight: bold;
@@ -35,5 +35,6 @@ h2 {
   width: 20px;
   height: 20px;
   line-height: 20px;
-  margin: 10px 10px;
+  padding-right: 15px;
+  margin: 10px 10px 0px 5px;
 }
